# rticonnextdds-usecases-automotive

./: .README.md.un~  .gitignore  ADD_CUSTOM_TYPES_TUTORIAL.md  CONTRIBUTING.md  README.md
datatypes/: CMakeLists.txt  LICENSE.md  README.md
datatypes/build-helpers/: README.md
datatypes/build-helpers/cmake/: README.md  init.cmake
datatypes/build-helpers/cmake/cmake_modules/: CodegenRTIConnextDDS.cmake  FindRTIConnextDDS.cmake  FindRTIConnextDDSMicro.cmake  README.md
datatypes/build-helpers/headers/: header.h  header.lua  header.sh  header.xml
datatypes/res/: README.md
datatypes/res/types/: CMakeLists.txt  README.md
datatypes/res/types/data/: CMakeLists.txt  README.md
datatypes/res/types/data/covesa/: VehicleSignalSpecification.idl
datatypes/res/types/data/covesa/ADAS/: ADAS.idl  CMakeLists.txt
datatypes/res/types/data/covesa/Body/: Body.idl  CMakeLists.txt
datatypes/res/types/data/covesa/Cabin/: CMakeLists.txt  Cabin.idl
datatypes/res/types/data/covesa/Chassis/: CMakeLists.txt  Chassis.idl
datatypes/res/types/data/covesa/Driver/: CMakeLists.txt  Driver.idl
datatypes/res/types/data/covesa/OBD/: CMakeLists.txt  OBD.idl
datatypes/res/types/data/covesa/Powertrain/: CMakeLists.txt  Powertrain.idl
datatypes/res/types/data/covesa/Vehicle/: CMakeLists.txt  Vehicle.idl
datatypes/res/types/data/covesa/base/: CMakeLists.txt  entity.idl
datatypes/res/types/data/my_types/hello/: CMakeLists.txt  txtmsg.idl
datatypes/res/types/data/ros/action_msgs/msg/: CMakeLists.txt  GoalInfo.idl  GoalStatus.idl  GoalStatusArray.idl
datatypes/res/types/data/ros/action_msgs/srv/: CMakeLists.txt  CancelGoal_Request.idl  CancelGoal_Response.idl
datatypes/res/types/data/ros/action_tutorials_interfaces/action/: CMakeLists.txt  Fibonacci_FeedbackMessage.idl  Fibonacci_GetResult_Request.idl  Fibonacci_GetResult_Response.idl  Fibonacci_SendGoal_Request.idl  Fibonacci_SendGoal_Response.idl
datatypes/res/types/data/ros/actionlib_msgs/msg/: CMakeLists.txt  GoalID.idl  GoalStatus.idl  GoalStatusArray.idl
datatypes/res/types/data/ros/builtin_interfaces/msg/: CMakeLists.txt
datatypes/res/types/data/ros/composition_interfaces/srv/: CMakeLists.txt  LoadNode_Request.idl
datatypes/res/types/data/ros/diagnostic_msgs/msg/: CMakeLists.txt  DiagnosticArray.idl  DiagnosticStatus.idl
datatypes/res/types/data/ros/diagnostic_msgs/srv/: CMakeLists.txt  SelfTest_Response.idl
datatypes/res/types/data/ros/example_interfaces/action/: CMakeLists.txt  Fibonacci_FeedbackMessage.idl  Fibonacci_GetResult_Request.idl  Fibonacci_GetResult_Response.idl  Fibonacci_SendGoal_Request.idl  Fibonacci_SendGoal_Response.idl
datatypes/res/types/data/ros/example_interfaces/msg/: ByteMultiArray.idl  CMakeLists.txt  Float32MultiArray.idl  Float64MultiArray.idl  Int16MultiArray.idl  Int32MultiArray.idl  Int64MultiArray.idl  Int8MultiArray.idl  MultiArrayLayout.idl  UInt16MultiArray.idl  UInt32MultiArray.idl  UInt64MultiArray.idl  UInt8MultiArray.idl
datatypes/res/types/data/ros/example_interfaces/srv/: CMakeLists.txt
datatypes/res/types/data/ros/gazebo_msgs/msg/: CMakeLists.txt  ContactState.idl  ContactsState.idl  LinkState.idl  LinkStates.idl  ModelState.idl  ModelStates.idl  WorldState.idl
datatypes/res/types/data/ros/gazebo_msgs/srv/: ApplyBodyWrench_Request.idl  ApplyJointEffort_Request.idl  CMakeLists.txt  GetLightProperties_Response.idl  GetLinkProperties_Response.idl  GetLinkState_Response.idl  GetModelState_Response.idl  GetPhysicsProperties_Response.idl  SetJointProperties_Request.idl  SetJointTrajectory_Request.idl  SetLightProperties_Request.idl  SetLinkProperties_Request.idl  SetLinkState_Request.idl  SetModelState_Request.idl  SetPhysicsProperties_Request.idl  SpawnModel_Request.idl
datatypes/res/types/data/ros/geometry_msgs/msg/: Accel.idl  AccelStamped.idl  AccelWithCovariance.idl  AccelWithCovarianceStamped.idl  CMakeLists.txt  Inertia.idl  InertiaStamped.idl  PointStamped.idl  Polygon.idl  PolygonStamped.idl  Pose.idl  PoseArray.idl  PoseStamped.idl  PoseWithCovariance.idl  PoseWithCovarianceStamped.idl  QuaternionStamped.idl  Transform.idl  TransformStamped.idl  Twist.idl  TwistStamped.idl  TwistWithCovariance.idl  TwistWithCovarianceStamped.idl  Vector3Stamped.idl  Wrench.idl  WrenchStamped.idl
datatypes/res/types/data/ros/lgsvl_msgs/msg/: BoundingBox3D.idl  CMakeLists.txt  CanBusData.idl  DetectedRadarObject.idl  DetectedRadarObjectArray.idl  Detection2D.idl  Detection2DArray.idl  Detection3D.idl  Detection3DArray.idl  Signal.idl  SignalArray.idl  Ultrasonic.idl  VehicleControlData.idl  VehicleOdometry.idl  VehicleStateData.idl
datatypes/res/types/data/ros/libstatistics_collector/msg/: CMakeLists.txt  DummyMessage.idl
datatypes/res/types/data/ros/lifecycle_msgs/msg/: CMakeLists.txt  TransitionDescription.idl  TransitionEvent.idl
datatypes/res/types/data/ros/lifecycle_msgs/srv/: CMakeLists.txt  ChangeState_Request.idl  GetState_Response.idl  (+2 more)
datatypes/res/types/data/rti/actuation/: Actuation_t.idl  CMakeLists.txt
datatypes/res/types/data/rti/base/: CMakeLists.txt  Entity_t.idl  Primitives_t.idl  Variants_t.idl
datatypes/res/types/data/rti/demo/: CMakeLists.txt  Shapes_t.idl
datatypes/res/types/data/rti/gateway/: CAN_t.idl  CMakeLists.txt
datatypes/res/types/data/rti/perception/: CMakeLists.txt  Lane_t.idl  Object_t.idl  Polygon_t.idl  Track_t.idl  Trajectory_t.idl
datatypes/res/types/data/rti/physics/: Acceleration_t.idl  CMakeLists.txt  Frame_t.idl  Path_t.idl  Point2D_t.idl  Point3D_t.idl  Pose3D_t.idl  Quaternion_t.idl  Time_t.idl  Vector_t.idl  Velocity_t.idl
datatypes/res/types/data/rti/planning/: Alert_t.idl  CMakeLists.txt  Maps_t.idl
datatypes/res/types/data/rti/sensing/: CMakeLists.txt  Camera_t.idl  Compass_t.idl  Gnss_t.idl  Image_t.idl  Imu_t.idl  Lidar_t.idl  PointCloud_t.idl
datatypes/res/types/data/rti/system/: CMakeLists.txt  InfoTopic_t.idl  StatusTopic_t.idl
examples/micro_cert/src/perception/: CMakeLists.txt  perception_dp.c  perception_dp.h  perception_main.c
examples/pro_cpp11/src/sceneEval/: CMakeLists.txt  sceneEval_main.cxx
(+496 files in other folders)
